2011-02-19 (0.5-1) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem on linux when there were a 
    need to recall the rbugs function to run OpenBUGS.

2011-02-18 (0.5-0) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem for OpenBUGS on linux,
   when defining the bugs path.

2011-01-01 (0.4-9) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem of out of range random seed 
    when generating initial seed for OpenBUGS.
  (thanks to Wen Huang)

2010-10-19 (0.4-8) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem when generating intial files.
  (thanks to Dr Stefano Conti)

2010-10-15 (0.4-7) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the log.txt generating problem in Linux
  the log.txt file is necessary to get the DIC output.
  (thanks to Dr Stefano Conti)
  
2010-09-28 (0.4-6) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the loading coda file in getBugsOutput 
  function when data is saved from OpenBugs using
  the interface.

2010-09-28 (0.4-5) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Input the generation of the "rbugs" class
  to the getBugsOutput function.


2010-07-07 (0.4-4) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fix the debug and dic functionality for
  OpenBUGS 
  * Corrected the wine script generation

2010-06-17 (0.4-3) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Included the rbugs2coda function to convert
  the rbugs output to a coda format.

2010-06-09 (0.4-2) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Set seed to be random if not specified by the
  user.
  * Fixed the cleanBugsWorkingDir function to delete