@@ -1,15 +1,15 @@
 Package: rbugs
 Title: Fusing R and OpenBugs
 Date: 2011-02-19
-Version: 0.5-1
+Version: 0.5-2
 Author: Jun Yan <jyan@stat.uconn.edu> and Marcos Prates
-        <marcos.prates@uconn.edu>
+        <marcosop@ime.unicamp.br>
 Description: Functions to prepare files needed for running BUGS in
         batch-mode, and running BUGS from R. Support for Linux and
         Windows systems with OpenBugs is emphasized.
 Suggests: coda (>= 0.13-5)
-Maintainer: Marcos Prates <marcos.prates@uconn.edu>
+Maintainer: Marcos Prates <marcosop@ime.unicamp.br>
 License: GPL (>= 3.0)
 Repository: CRAN
-Date/Publication: 2011-02-20 09:05:50
-Packaged: 2011-02-19 17:54:49 UTC; mprates
+Date/Publication: 2011-06-27 18:12:06
+Packaged: 2011-06-27 17:11:23 UTC; mprates
